# WebShellManager

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  WebShell.cpp  WebShell.h  WebShellManager  WebShellManager.cbp  cmake_install.cmake  cryptohelper.cpp  cryptohelper.h  curlhelper.cpp  curlhelper.h  generateStandardShell.py  main.cpp  manager  shells.json  test  test.cpp
